Modernize Java examples to Java 17