@@ -1,15 +1,13 @@
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.HashSet;
 
 public class ListAndSetExample {
     public static void main(String[] args) {
-        List<String> words = Arrays.asList("do", "while", "if", "a");
-        Set<Integer> sizes = new HashSet<>();
-        for (String word: words) {
+        var sizes = new HashSet<Integer>();
+        for (var word : List.of("do", "while", "if", "a")) {
             sizes.add(word.length());
         }
-        assert sizes.equals(new HashSet<Integer>(Arrays.asList(5,2,1)));
+        assert sizes.equals(Set.of(5, 2, 1));
     }
 }
